testcases/malgo/error/ErrorOnlySig.mlg
module ErrorOnlySig = {
  def foo : Int32# -> ();
}